--- a/hardik/prime_app_demo/laravel demo/PostApp/composer.json
+++ b/hardik/prime_app_demo/laravel demo/PostApp/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "psr/simple-cache": "2.0",
         "yajra/laravel-datatables-oracle": "^10.2"
     },
     "require-dev": {
@@ -19,6 +20,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
+        "rector/rector": "^0.15.8",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
