--- a/hardik/prime_app_demo/laravel_demo/role_mangement/composer.json
+++ b/hardik/prime_app_demo/laravel_demo/role_mangement/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.3",
-        "spatie/laravel-permission": "^5.8"
+        "spatie/laravel-permission": "^5.8",
+        "yajra/laravel-datatables-oracle": "^10.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
