--- a/hardik/prime_app_demo/laravel_demo/role_mangement/package.json
+++ b/hardik/prime_app_demo/laravel_demo/role_mangement/package.json
@@ -3,9 +3,11 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "watch":"vite build --watch"
+        "watch": "vite build --watch",
+        "development": "mix"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.1",
         "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
@@ -13,7 +15,12 @@
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
+        "sass-loader": "^12.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "font-awesome": "^4.7.0"
     }
 }
